--- a/pixel/index.html
+++ b/pixel/index.html
@@ -2,32 +2,106 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pixel Color Detector</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChromaCapture Pro | Advanced Pixel Color Detector</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-  <h1>Pixel Color Detector</h1>
+  <div class="app-container">
+    <header>
+      <div class="logo">
+        <i class="fas fa-palette"></i>
+        <h1>ChromaCapture Pro</h1>
+      </div>
+      <p class="tagline">Advanced Color Detection & Analysis Tool</p>
+    </header>
 
-  <section>
-    <h2>Upload Image</h2>
-    <input type="file" id="imageUpload" accept="image/*" />
-  </section>
+    <main>
+      <div class="source-controls">
+        <div class="tab-buttons">
+          <button id="webcamTab" class="tab-button active"><i class="fas fa-video"></i> Webcam</button>
+          <button id="uploadTab" class="tab-button"><i class="fas fa-upload"></i> Upload</button>
+        </div>
+        
+        <div id="uploadControls" class="hidden">
+          <div class="file-upload-container">
+            <label for="imageUpload" class="file-upload-label">
+              <i class="fas fa-cloud-upload-alt"></i>
+              <span>Select Image</span>
+            </label>
+            <input type="file" id="imageUpload" accept="image/*" />
+          </div>
+        </div>
+      </div>
 
-  <section>
-    <h2>Live Webcam Feed</h2>
-    <video id="webcam" autoplay playsinline width="400"></video>
-  </section>
+      <div class="main-content">
+        <div class="canvas-container">
+          <div class="source-display">
+            <video id="webcam" autoplay playsinline></video>
+            <canvas id="canvas"></canvas>
+            <div class="zoom-lens" id="zoomLens"></div>
+          </div>
+          
+          <div class="canvas-controls">
+            <button id="freezeBtn"><i class="fas fa-pause"></i> Freeze</button>
+            <button id="captureBtn"><i class="fas fa-camera"></i> Capture</button>
+            <button id="downloadBtn"><i class="fas fa-download"></i> Save</button>
+          </div>
+        </div>
 
-  <section>
-    <h2>Canvas Output</h2>
-    <canvas id="canvas" width="400" height="300"></canvas>
-  </section>
+        <div class="color-info-container">
+          <div class="color-panel">
+            <h3>Active Color</h3>
+            <div id="colorDisplay"></div>
+            <div id="colorValue">Hover over image to detect color</div>
+            <div class="color-format-toggles">
+              <button class="format-btn active" data-format="rgb">RGB</button>
+              <button class="format-btn" data-format="hex">HEX</button>
+              <button class="format-btn" data-format="hsl">HSL</button>
+            </div>
+          </div>
 
-  <section>
-    <h2>Detected Color</h2>
-    <div id="colorDisplay"></div>
-    <p id="colorValue">Hover over canvas to detect color</p>
-  </section>
+          <div class="color-history">
+            <h3>Color History <i class="fas fa-history"></i></h3>
+            <div id="colorList" class="color-swatches"></div>
+          </div>
+
+          <div class="color-harmonies">
+            <h3>Color Harmonies</h3>
+            <div id="complementary" class="harmony-set">
+              <h4>Complementary</h4>
+              <div class="harmony-swatches"></div>
+            </div>
+            <div id="analogous" class="harmony-set">
+              <h4>Analogous</h4>
+              <div class="harmony-swatches"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <p>ChromaCapture Pro &copy; 2025 | <a href="#" id="aboutLink">About</a></p>
+    </footer>
+
+    <div id="aboutModal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2>About ChromaCapture Pro</h2>
+        <p>ChromaCapture Pro is an advanced color detection and analysis tool that allows you to identify colors from webcam feed or uploaded images in real-time. Perfect for designers, artists, and developers.</p>
+        <h3>Features:</h3>
+        <ul>
+          <li>Real-time color detection</li>
+          <li>Multiple color formats (RGB, HEX, HSL)</li>
+          <li>Color history tracking</li>
+          <li>Color harmony suggestions</li>
+          <li>High-precision zoom lens</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
